day 5 week 2 commit

--- a/Expense Tracker/Transactions.html
+++ b/Expense Tracker/Transactions.html
@@ -7,7 +7,7 @@
         <nav class="navbar">
             <div class="nav-left">Expense Tracker</div>
             <div class="nav-right">
-                <a href="index.html">Home</a>
+                <a href="index.html">Add Expense</a>
                 <a href="Transactions.html" class="active">Transactions</a>
             </div> 
         </nav>
@@ -33,6 +33,7 @@
                         <th>Date</th>
                         <th>Type</th>
                         <th>Amount</th>
+                        <th>Description</th>
                         <th>Actions</th>
                     </tr>
                 </thead>
