backend done for transactions

--- a/Expense Tracker/Frontend/index.html
+++ b/Expense Tracker/Frontend/index.html
@@ -57,6 +57,7 @@
       <p>Total Income : <span id="totalIncome"></span></p>
       <p>Total Expense : <span id="totalExpense"></span></p>
       <p>Balance : <span id="balance"></span></p>
+      <button id="btn1" class="btn">Show Summary</button>
     </div>
     <script src="store.js"></script>
     <script src="ExpenseTracker.js"></script>
